--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -27,50 +27,6 @@
             <img class="header__icon" src="./images/search.svg" alt="" />
         </label>
 
-        <div class="header__container">
-            <div class="slider__container">
-                <div class="range-slider">
-                    <span id="rs-bullet" class="rs-label">2022</span>
-                    <input
-                        id="range"
-                        class="rs-range"
-                        type="range"
-                        value="2022"
-                        min="1950"
-                        max="2022"
-                    />
-                </div>
-
-                <div class="box-minmax">
-                    <span style="font-size: 10px">1950</span
-                    ><span style="font-size: 10px">2022</span>
-                </div>
-            </div>
-            <div class="btn__container">
-                <div class="checkbox__container">
-                    <input type="checkbox" id="i" />
-
-                    <label for="i" class="checkbox">
-                        <span class="checkbox__inner">
-                            <span class="green__ball"></span>
-                        </span>
-                    </label>
-                    <div class="checkbox__text">
-                        <span style="font-size: 10px; color: white"
-                            >Adult Film</span
-                        >
-                        <div class="checkbox__text--options">
-                            <span style="font-size: 10px" class="off"
-                                >exclude</span
-                            >
-                            <span style="font-size: 10px" class="on"
-                                >include</span
-                            >
-                        </div>
-                    </div>
-                </div>
-                <button type="button" class="reset__btn">Reset filters</button>
-            </div>
-        </div>
+        <button type="button">click me</button>
     </div>
 </header>
