add all project

--- a/src/partials/main-home.html
+++ b/src/partials/main-home.html
@@ -2,7 +2,7 @@
     <section class="films">
         <div class="container">
             <h1 class="visually-hidden">Filmoteka</h1>
-            <ul class="list__film"></ul>
+            <ul class="gallery"></ul>
         </div>
         <div id="tui-pagination-container" class="tui-pagination"></div>
     </section>
