--- a/src/partials/main-my-library.html
+++ b/src/partials/main-my-library.html
@@ -2,7 +2,7 @@
     <section class="films">
         <div class="container">
             <h1 class="visually-hidden">My library</h1>
-            <ul class="list__film js-library"></ul>
+            <ul class="gallery js-library"></ul>
             <div id="tui-pagination-container" class="tui-pagination"></div>
         </div>
     </section>
