--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,1 +1,148 @@
-
+.films {
+    padding-top: 20px;
+    padding-bottom: 40px;
+    @include tablet {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+}
+.gallery {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    @include tablet {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 32px;
+    }
+    @include desktop {
+        gap: 16px;
+        justify-content: start;
+    }
+}
+// .list__item {
+//     display: flex;
+//     flex-direction: column;
+//     }
+.list__item:not(:last-child) {
+    margin-bottom: 20px;
+    @include tablet {
+        margin-bottom: 0;
+    }
+    @include desktop {
+        margin-bottom: 16px;
+    }
+}
+.list__img {
+    border-radius: 5px;
+    object-fit: cover;
+    aspect-ratio: 2 / 3;
+    @include tablet {
+        width: 336px;
+    }
+    @include desktop {
+        width: 394px;
+    }
+}
+.list__text {
+    width: 280px;
+    padding-top: 10px;
+    @include tablet {
+        width: 336px;
+    }
+    @include desktop {
+        width: 394px;
+    }
+}
+.list__title {
+    font-weight: 500;
+    font-size: inherit;
+    line-height: 1.17;
+    text-transform: uppercase;
+    @include tablet {
+        line-height: 1.33;
+    }
+    @include desktop {
+        font-size: 20px;
+        line-height: 1.2;
+    }
+}
+.list__genre {
+    font-weight: 500;
+    line-height: 1.33;
+    color: $accentColor;
+    @include desktop {
+        font-size: 20px;
+        line-height: 1.2;
+    }
+}
+.tui-pagination {
+    margin: 40px 0 0 0;
+    height: 40px;
+    @include tablet {
+        margin: 60px 0 0 0;
+    }
+}
+.list__vote {
+    display: inline-block;
+    width: 36px;
+    text-align: center;
+    color: $whiteColor;
+    background-color: $accentColor;
+    border-radius: 5px;
+    @include desktop {
+        width: 40px;
+    }
+}
+.tui-pagination .tui-page-btn {
+    width: 32px;
+    height: 32px;
+    padding-top: 10px;
+    padding-bottom: 0;
+    line-height: 1.33;
+    border: transparent;
+}
+.tui-pagination .tui-is-selected,
+.tui-pagination strong {
+    width: 40px;
+    height: 40px;
+    padding-top: 11px;
+    font-size: 16px;
+    border-color: $accentColor;
+    background: $accentColor;
+    border-radius: 5px;
+}
+.tui-pagination .tui-first-child.tui-is-selected {
+    border-left: transparent;
+}
+// .tui-pagination .tui-is-selected:hover {
+//     background-color: #4B96E6;
+// }
+.tui-pagination .tui-page-btn:hover {
+    background-color: $accentColor;
+    border-radius: 5px;
+    color: $whiteColor;
+}
+.tui-pagination .tui-last-child.tui-is-selected {
+    border-right: transparent;
+}
+.tui-pagination .tui-next-is-ellip,
+.tui-pagination .tui-prev-is-ellip {
+    padding-top: 0px;
+    @media screen and (max-width: 480px) {
+        display: none;
+    }
+}
+.tui-pagination .tui-first,
+.tui-pagination .tui-last {
+    @media screen and (max-width: 480px) {
+        display: none;
+    }
+}
+.tui-pagination .tui-first,
+.tui-pagination .tui-prev,
+.tui-pagination .tui-next,
+.tui-pagination .tui-last {
+    padding-top: 12px;
+}
