--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import './base/common';
 @import './utils/hidden';
 @import './components/container';
+@import './components/buttons';
 
 @import './layout/header';
 @import './layout/main';
