--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,7 +8,7 @@
 @import './utils/hidden';
 @import './components/container';
 @import './components/buttons';
-
+@import './components/registrationForm';
 @import './layout/header';
 @import './layout/main';
 @import './layout/footer';
