--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,15 @@
 <footer class="footer">
-    <div class="footer__text">© 2022 | All Rights Reserved |</div>
-    <div class="footer__conteiner">
-        <span class="footer__dev">Developed with</span>
-        <svg class="footer__image">
-            <use
-                class="footer__icon"
-                href="/src/images/heart.svg#icon-Vector-3"
-            ></use>
-        </svg>
-        by &nbsp;
-        <a data-modal-open class="footer__link" href="">GoIT Students</a>
-    </div>
+    <container class="footer-box">
+        <p class="footer__title secondary">© 2022 | All Rights Reserved |</p>
+        <div class="footer-div">
+            <p class="footer__title secondary">Developed with</p>
+            <svg class="footer-icon" width="14" height="13">
+                <use
+                    href="./images/sprite/symbol-defs.svg#icon-footer-heart"
+                ></use>
+            </svg>
+            <span class="footer__link secondary">by GoIT Students</span>
+        </div>
+        <button href="#" class="btn-move-up is-hidden"></button>
+    </container>
 </footer>
