--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,6 +10,6 @@
             </svg>
             <span class="footer__link secondary">by GoIT Students</span>
         </div>
-        <button href="#" class="btn-move-up is-hidden"></button>
+        <button href="#" class="btn-move-up visually-hidden"></button>
     </container>
 </footer>
