--- a/src/partials/header-my-library.html
+++ b/src/partials/header-my-library.html
@@ -2,13 +2,12 @@
     <div class="container">
         <nav class="navigation">
             <a class="logo link" href="./index.html">
-                <img
-                    src="./images/logo.svg"
-                    alt="logo"
-                />
+                <svg class="logo__img" width="24px" height="24px">
+                    <use href="./images/sprite/symbol-defs.svg#icon-film"></use>
+                </svg>
                 <span class="logo__text">Filmoteka</span>
             </a>
-            <ul class="list navigation__list">
+            <ul class="list navigation__list fade-in-right">
                 <li>
                     <a class="link" href="./index.html">Home</a>
                 </li>
