--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <p class="footer__title secondary">© 2022 | All Rights Reserved |</p>
         <div class="footer-div">
             <p class="footer__title secondary">Developed with</p>
-            <svg class="footer-icon" width="14" height="13">
+            <svg class="footer-icon heartbeat" width="18" height="17">
                 <use
                     href="./images/sprite/symbol-defs.svg#icon-footer-heart"
                 ></use>
