--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -1,19 +1,21 @@
 <header class="header">
     <div class="container">
         <nav class="navigation">
-            <a class="logo link" href="./index.html">
-                <img src="./images/logo.svg" alt="logo" />
+            <a class="logo" href="./index.html">
+                <svg class="logo__img" width="24px" height="24px">
+                    <use href="./images/sprite/symbol-defs.svg#icon-film"></use>
+                </svg>
                 <span class="logo__text">Filmoteka</span>
             </a>
-            <ul class="list navigation__list">
+            <ul class="navigation__list fade-in-right">
                 <li>
-                    <a class="link link--current" href="./index.html">Home</a>
+                    <a class="link--current" href="./index.html">Home</a>
                 </li>
                 <li>
-                    <a class="link" href="./my-library.html">My library</a>
+                    <a href="./my-library.html">My library</a>
                 </li>
                 <li>
-                    <a class="link" href="#" id="user">Login | Join</a>
+                    <a href="#" id="user">Login | Join</a>
                 </li>
             </ul>
         </nav>
@@ -32,12 +34,16 @@
             </button>
             <label class="header-search__label">
                 <input
-                    class="header__input"
+                    class="header-search__input"
                     type="text"
                     id="search-box"
                     placeholder="Movie search"
                 />
-                <img class="header__icon" src="./images/search.svg" alt="" />
+                <svg class="header-search__icon" width="24px" height="24px">
+                    <use
+                        href="./images/sprite/symbol-defs.svg#icon-search"
+                    ></use>
+                </svg>
             </label>
         </div>
 
@@ -52,10 +58,10 @@
                     id="year_choice"
                 ></select>
                 <select class="filter__input" name="sort" id="sort_choice">
-                    <option value="vote_average.desc">Sort by</option>
-                    <option value="vote_average.desc">Average voite</option>
-                    <option value="vote_count.desc">Voite count</option>
-                    <option value="popularity.desc">Popularity</option>
+                    <option value="">Sort by</option>
+                    <option value="vote_average">Average voite</option>
+                    <option value="vote_count">Vote count</option>
+                    <option value="popularity">Popularity</option>
                 </select>
                 <div class="filter__checkbox">
                     <input type="checkbox" id="genre_checkbox" name="genre" />
