--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,12 +1,12 @@
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.link {
-  color: inherit;
-  text-decoration: none;
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 h1,
@@ -16,12 +16,12 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
