--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,40 +1,43 @@
 .footer {
     background-color: var(--button-paggination-color);
     box-shadow: 0px 10px 36px 16px #e2e2e2;
-}
 
-.footer-box {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 470px;
+    &-box {
+        display: flex;
+        flex-wrap: wrap;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 470px;
 
-    align-items: center;
-    justify-content: center;
+        align-items: center;
+        justify-content: center;
 
-    @media screen and (min-width: 768px) {
-        min-width: 550px;
-        justify-content: space-evenly;
-        align-items: flex-end;
+        @media screen and (min-width: 768px) {
+            min-width: 550px;
+            justify-content: space-evenly;
+            align-items: flex-end;
+        }
     }
-}
+    &-div {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
 
-.footer-div {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-
-    @media screen and (min-width: 768px) {
-        align-items: flex-start;
+        @media screen and (min-width: 768px) {
+            align-items: flex-start;
+        }
     }
-}
-
-.footer-icon {
-    margin-left: 10px;
-    margin-right: 10px;
+    &-icon {
+        // width: 18px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    &__link {
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
 
 .secondary {
@@ -55,11 +58,6 @@
     }
 }
 
-.footer__link {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
 .btn-move-up {
     position: fixed;
     border: transparent;
@@ -70,6 +68,7 @@
     right: 15px;
     z-index: 101;
     cursor: pointer;
+
     background: url('../images/footer/circle-up.svg') no-repeat;
     @media screen and (min-width: 768px) {
         bottom: 105px;
